Finish coding the page action

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -17,10 +17,9 @@
     </style>
   </head>
   <body>
-    <input type="checkbox" name="toggle" id="toggle"> Apply Series of Tubes? </input>
-    <br>
     <input id="text" type="text" placeholder="text to match"/>
     <input id="replacement" type="text" placeholder="replacement text"/>
+    <input id="submit" type="submit" value="submit"/>
     <script src="jquery-1.11.1.js"></script>
     <script src="popup.js"></script>
   </body>
